新增媒资功能->实现视频上传到MinIO,使用xxl-job实现服务调度

--- a/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
+++ b/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
@@ -12,6 +12,15 @@
     <description>xuecheng-plus-system-api</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.xuecheng</groupId>
             <artifactId>xuecheng-plus-system-model</artifactId>
