--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
@@ -1,12 +1,22 @@
-#微服务配置
+#微服务配置   content-service-dev.yaml
 spring:
   application:
     name: content-service
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.113.180.97:3306/xc402_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: 123456
+  cloud:
+    nacos:
+      server-addr: 47.113.180.97:8848
+      config: #配置文件相关配置
+        namespace: dev402
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+  profiles:
+    active: dev   #环境名
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://47.113.180.97:3306/xc402_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
+#    username: root
+#    password: 123456
 # 日志文件配置路径
 logging:
   config: classpath:log4j2-dev.xml
